# SYMLog

./: .cursorrules  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  README.md  austin-todo.md  bts.jsonc  package.json  tsconfig.json  vercel.json  wes-todo.md
.cursor/rules/: README.md  architecture.mdc  global.mdc  index.md  index.mdc  kluster-code-verify.mdc  nextjs.mdc
.cursor/rules/backend/: api.mdc  convex.mdc  real-time.mdc
.cursor/rules/core/: architecture.mdc  performance.mdc  quality.mdc  security.mdc
.cursor/rules/desktop/: tauri.mdc
.cursor/rules/devops/: ci-cd.mdc  deployment.mdc  infrastructure.mdc
.cursor/rules/frontend/: nextjs.mdc  tailwind.mdc  ui-components.mdc
.cursor/rules/quality/: code-review.mdc  documentation.mdc  metrics.mdc
.cursor/rules/testing/: e2e.mdc  integration.mdc  unit.mdc
.cursor/rules/web3/: crossmint.mdc  solana.mdc
.windsurf/: cascade
.windsurf/rules/: README.md  ai-assistance.md  code-generation.md  workspace.md
.zed/: README.md  keymap.json  settings.json  tasks.json
apps/auth-web/: .vercelignore  README.md  convex.json  next.config.js  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/: .env.example  .eslintrc.json  .vercelignore  CLAUDE.md  DESKTOP_SETUP.md  IMPLEMENTATION_SUMMARY.md  instrumentation.ts  javascriptcoregtk-4.1.pc  package.json  run-desktop.sh  tailwind.config.ts  test  test-chat-api.js  test.c  tsconfig.json  vercel.json
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/src/: auth.rs  deep_link.rs  lib.rs
(+354 files in other folders)
